--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
               <li><a href="/users">Users</a></li>
               <li><a href="/countries">Travel</a></li>
               <li><a href="/countries/new">New Memory</a></li>
+              <li><a href="/users/new">New User</a></li>
 
             </ul>
         
@@ -24,6 +25,7 @@
               <li><a href="/users">Users</a></li>
               <li><a href="/countries">Travel</a></li>
               <li><a href="/countries/new">New Memory</a></li>
+              <li><a href="/users/new">New User</a></li>
 
             </ul>
             <a href="#" data-target="nav-mobile" class="sidenav-trigger"
