--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,6 +6,7 @@
       <li><a href="/users">Users</a></li>
       <li><a href="/countries">Travel</a></li>
       <li><a href="/countries/new">New Memory</a></li>
+      <li><a href="/users/new">New User</a></li>
       <li>
         <a href="/sessions/logout">Welcome, <%=user.name%>!</a>
       </li>
@@ -16,6 +17,7 @@
       <li><a href="/users">Users</a></li>
       <li><a href="/countries">Travel</a></li>
       <li><a href="/countries/new">New Memory</a></li>
+      <li><a href="/users/new">New User</a></li>
       <li>
         <a href="/sessions/logout">Welcome, <%=user.name%>!</a>
       </li>
