--- a/views/countries/show.ejs
+++ b/views/countries/show.ejs
@@ -68,6 +68,10 @@
           <section>
             <a href="/countries/<%=countries._id%>/edit">Edit</a>
           </section>
+
+          <form action="/countries/<%=users._id%>?_method=DELETE" method="post">
+            <input type="submit" value="Delete Memory :(" />
+          </form>
         </div>
       </div>
     </div>
