--- a/views/countries/show.ejs
+++ b/views/countries/show.ejs
@@ -69,7 +69,10 @@
             <a href="/countries/<%=countries._id%>/edit">Edit</a>
           </section>
 
-          <form action="/countries/<%=users._id%>?_method=DELETE" method="post">
+          <form
+            action="/countries/<%=countries._id%>?_method=DELETE"
+            method="post"
+          >
             <input type="submit" value="Delete Memory :(" />
           </form>
         </div>
